# chatys

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  Shuttle.toml  docker-compose.yml  errors_sqlx.txt
.sqlx/: query-0c1f6c7f2001d657a289b97293565e7c6e96780c2bd2cb158b9b46cc1bab48c4.json  query-0c31241af9f4f37770860feee692ec90d54d3a5253ccf73ba36b90d82e29e732.json  query-11b7415d113dd880555a46c14b124bee6be4f8d18af651886a08138057b1a36a.json  query-11c57d81391de749337e8e004a17c591ea99c7b31730bfdf7a6b6fb33e3e2c6e.json  query-15d84fdb21a1a144f84bd5e9842efd0691dd73e0fe72c83ff7421788b56d12db.json  query-167003061df00a90b50bb78670e676b9a57281aeedd5549f931d26d9839b1731.json  query-1b290b56b9f59d4186e60d30b7d595a7c6e5b3b3a1acd2925abac0ea2bce772c.json  query-1d966dfb49a93045864665d4c5841e67bda0e3a3158030108f079d914c90d859.json  query-221bdf66b873688d394ea785a6b6f0d8e8589e1cc6807f9666784c3ccaba82c7.json  query-37d6efb29f411ffa370a25596eba94a04e9a5c6552044b06ce36b686ec1c4727.json  query-3c38950c81d44ca2cc4c3647abe8b4084d1653abe889cbb21b24a942e0531299.json  query-3d1695988bc5bb46a09a58578b3cef46b8397c1e9742728a060aaa0ae2e1eee9.json  query-5af6c8d7d88d3f3c58b9a420960dd202ea2940f027c7a10e4c875b32f79273fb.json  query-648038ac98af16e733ad396217782e0b56cff857e443d3c997437544b5d6b5ed.json  query-64d49add95cee01db8653f22150ec75311edf13a20915dbcf398cb4618acd43f.json  query-66261bca61e5f38f99d9ab62b4b5edc7ed5df7201235c150ccdf08f98c0f0ee3.json  query-685d7c52978e09db328d10413de16a5c26796fe78230d3f1159d284a2b09f2bc.json  (+23 more)
frontend/: index.html  package-lock.json  package.json  (+3 more)
src/: lib.rs  (+1 more)
(+1394 files in other folders)
