[package]
name = "axum_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros", "multipart", "ws"] } 
axum-extra = { version = "0.10.1", features = ["cookie"] }
tower-http = { version = "0.6.1", features = ["full"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24.0"
bcrypt = "0.15.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cookie = "0.18.1"
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
headers = "0.4.0"
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.8.3", features = ["macros", "postgres", "runtime-tokio", "time", "chrono" ] }
dotenv = "0.15.0"
rand = "0.8.5"
uuid = { version = "1.11.1", features = ["v4"] }
serde_urlencoded = "0.7.1"
hyper = { version = "1.5.2", features = ["full"] }
shuttle-axum = "0.55.0"
shuttle-runtime = "0.55.0"
shuttle-shared-db = { version = "0.55.0", features = ["postgres", "sqlx"] }
tracing = "0.1"
tracing-subscriber = "0.3"
askama = "0.14.0"
dashmap = "6.1.0"


[lib]
crate-type = ["cdylib"]



